<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="br.com.pegasus.hojenaoapp.EditClockActivityFragment">
    <LinearLayout android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:orientation="vertical">
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:elevation="100dp"
        android:layout_gravity="center"
        card_view:cardCornerRadius="4dp">
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        >
        <TextView
            android:id="@+id/title_textview"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/att_basic_data"
            android:textAppearance="?android:textAppearanceMedium" />
        <TimePicker
            android:id="@+id/timePicker"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:layout_alignParentTop="true"
            android:layout_centerHorizontal="true"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:gravity="center_horizontal" />

        <TextView
            android:id="@+id/my_textview"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:elevation="5dp"
            android:textColor="@android:color/black"
            android:text="@string/att_name"
            android:textAppearance="?android:textAppearance" />

        <EditText
            android:id="@+id/inputName"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:paddingBottom="@dimen/activity_vertical_margin" />
    </LinearLayout>
    </android.support.v7.widget.CardView>
        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="10dp"
            android:orientation="vertical">
        </LinearLayout>
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:elevation="100dp"
        android:layout_gravity="center"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:gravity="center">

                <TextView
                    android:id="@+id/soneca_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/att_snooze"
                    android:textAppearance="?android:textAppearanceMedium" />

                <Switch
                    android:id="@+id/inputSnooze"
                    android:layout_width="0dp"
                    android:layout_height="wrap_content"
                    android:layout_weight="1" />

            </LinearLayout>
            <LinearLayout
                android:id="@+id/layoutSoneca"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal"
                android:visibility="gone"
                >
            <EditText
                android:id="@+id/inputSnoozeTime"
                android:layout_width="40dp"
                android:layout_height="wrap_content"
                android:ems="10"
                android:inputType="number"
                 />
                <TextView
                    android:id="@+id/min_textview"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:textColor="@android:color/black"
                    android:text="@string/att_snooze_time_min"
                    android:textAppearance="?android:textAppearanceInverse" />
            </LinearLayout>
        </LinearLayout>
    </android.support.v7.widget.CardView>
    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="10dp"
        android:orientation="vertical">
    </LinearLayout>
    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:elevation="100dp"
        android:layout_gravity="center"
        card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin">
        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:gravity="center">

            <TextView
                android:id="@+id/feriado_despertar"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/att_dias_feriado"
                android:textAppearance="?android:textAppearanceMedium" />

            <Switch
                android:id="@+id/inputFeriado"
                android:layout_width="0dp"
                android:layout_height="wrap_content"
                android:layout_weight="1" />

        </LinearLayout>
        <TextView
            android:id="@+id/soneca_textviewExplain"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:textColor="@android:color/black"
            android:text="@string/att_dias_feriado_explain"
            android:textAppearance="?android:textAppearanceInverse" />
        </LinearLayout>
    </android.support.v7.widget.CardView>

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="10dp"
            android:orientation="vertical">
        </LinearLayout>
        <android.support.v7.widget.CardView
            xmlns:card_view="http://schemas.android.com/apk/res-auto"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:elevation="100dp"
            android:layout_gravity="center"
            card_view:cardCornerRadius="4dp">

            <LinearLayout
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:orientation="vertical"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="@dimen/activity_horizontal_margin"
                android:paddingRight="@dimen/activity_horizontal_margin"
                android:paddingTop="@dimen/activity_vertical_margin">
                <TextView
                    android:id="@+id/title_dias_semana"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/att_dias_semana"
                    android:textAppearance="?android:textAppearanceMedium" />
            <GridLayout
                android:id="@+id/layoutDiasUteisSegunda"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:gravity="right"
                android:columnCount="2"
                android:orientation="horizontal"
                >
                <TextView
                    android:id="@+id/text_DiasUteisDomingo"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/att_sunday"
                    android:textColor="@android:color/black"
                    android:textAppearance="?android:textAppearance" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBoxDomingo"
                    android:layout_gravity="end" >
                </CheckBox>
                <TextView
                    android:id="@+id/text_DiasUteisSegunda"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/att_monday"
                    android:textColor="@android:color/black"
                    android:textAppearance="?android:textAppearance" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBoxSegunda"
                    android:layout_gravity="end" >
                </CheckBox>
                <TextView
                    android:id="@+id/text_DiasUteisTerca"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/att_tuesday"
                    android:textColor="@android:color/black"
                    android:textAppearance="?android:textAppearance" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBoxTerca"
                    android:layout_gravity="end" >
                </CheckBox>
                <TextView
                    android:id="@+id/text_DiasUteisQuarta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/att_wednesday"
                    android:textColor="@android:color/black"
                    android:textAppearance="?android:textAppearance" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBoxQuarta"
                    android:layout_gravity="end" >
                </CheckBox>

                <TextView
                    android:id="@+id/text_DiasUteisQuinta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/att_thusday"
                    android:textColor="@android:color/black"
                    android:textAppearance="?android:textAppearance" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBoxQuinta"
                    android:layout_gravity="end" >
                </CheckBox>
                <TextView
                    android:id="@+id/text_DiasUteisSexta"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/att_friday"
                    android:textColor="@android:color/black"
                    android:textAppearance="?android:textAppearance" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBoxSexta"
                    android:layout_gravity="end" >
                </CheckBox>
                <TextView
                    android:id="@+id/text_DiasUteisSabado"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:text="@string/att_saturday"
                    android:textColor="@android:color/black"
                    android:textAppearance="?android:textAppearance" />

                <CheckBox
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:id="@+id/checkBoxSabado"
                    android:layout_gravity="end" >
                </CheckBox>
            </GridLayout>
            </LinearLayout>
        </android.support.v7.widget.CardView>


    </LinearLayout>

</ScrollView>
