<ScrollView xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:gravity="center"
    tools:context="br.com.pegasus.hojenaoapp.SettingsActivityFragment">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingTop="@dimen/activity_vertical_margin">

    <android.support.v7.widget.CardView xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:elevation="100dp"
        card_view:cardCornerRadius="4dp">

        <LinearLayout
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="@dimen/activity_horizontal_margin"
            android:paddingRight="@dimen/activity_horizontal_margin"
            android:paddingTop="@dimen/activity_vertical_margin">

            <TextView
                android:id="@+id/title_textview"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:paddingBottom="@dimen/activity_vertical_margin"
                android:paddingLeft="9dp"
                android:paddingTop="@dimen/activity_vertical_margin"
                android:text="@string/att_basic_data"
                android:textAppearance="?android:textAppearanceMedium" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:orientation="horizontal">

                <TextView
                    android:id="@+id/textView2"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_alignParentStart="true"
                    android:layout_below="@+id/title_textview"
                    android:layout_weight="0.7"
                    android:gravity="center_vertical"
                    android:paddingLeft="9dp"
                    android:text="Detectar cidade automaticamente?"
                    android:textAppearance="?android:attr/textAppearance" />

                <Switch
                    android:id="@+id/checkBox"
                    android:layout_width="0dp"
                    android:layout_height="48dp"
                    android:layout_alignParentEnd="true"
                    android:layout_alignTop="@+id/textView2"
                    android:layout_weight="0.3"
                    android:gravity="end" />

            </LinearLayout>


            <TextView
                android:id="@+id/textView3"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/textView2"
                android:gravity="left"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:paddingLeft="9dp"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:text="Estado"
                android:textAppearance="?android:attr/textAppearance" />

            <Spinner
                android:id="@+id/spinnerState"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView3"
                android:prompt="@string/country_prompt" />

            <TextView
                android:id="@+id/valueState"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentLeft="true"
                android:layout_below="@+id/textView3"
                android:gravity="center_vertical"
                android:paddingLeft="9dp"
                android:text="Teste"
                android:textAppearance="?android:textAppearanceListItem"
                android:visibility="gone" />

            <TextView
                android:id="@+id/labelCity"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_below="@+id/spinnerState"
                android:gravity="left"
                android:paddingBottom="@dimen/activity_horizontal_margin"
                android:paddingLeft="9dp"
                android:paddingTop="@dimen/activity_horizontal_margin"
                android:text="Cidade"
                android:textAppearance="?android:attr/textAppearance" />

            <Spinner
                android:id="@+id/spinnerCity"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView4"
                android:prompt="@string/country_prompt" />

            <TextView
                android:id="@+id/valueCity"
                android:layout_width="fill_parent"
                android:layout_height="wrap_content"
                android:layout_alignParentStart="true"
                android:layout_below="@+id/textView4"
                android:gravity="center_vertical"
                android:paddingLeft="9dp"
                android:prompt="@string/country_prompt"
                android:textAppearance="?android:textAppearanceListItem"
                android:visibility="gone" />

        </LinearLayout>
    </android.support.v7.widget.CardView>

    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="10dp"
        android:orientation="vertical"></LinearLayout>

    <android.support.v7.widget.CardView
        xmlns:card_view="http://schemas.android.com/apk/res-auto"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:layout_gravity="center"
        android:elevation="100dp"
        card_view:cardCornerRadius="4dp">

    <LinearLayout
        android:id="@+id/layoutFeriados"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:paddingBottom="@dimen/activity_vertical_margin"
        android:paddingLeft="@dimen/activity_horizontal_margin"
        android:paddingRight="@dimen/activity_horizontal_margin"
        android:paddingTop="@dimen/activity_vertical_margin"
        android:visibility="gone">
        <TextView
            android:id="@+id/title_view"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="@dimen/activity_vertical_margin"
            android:paddingLeft="9dp"
            android:paddingTop="@dimen/activity_vertical_margin"
            android:text="@string/att_holiday"
            android:textAppearance="?android:textAppearanceMedium" />
        <ListView
            android:layout_width="fill_parent"
            android:layout_height="200dp"
            android:id="@+id/listaFeriados">

        </ListView>
    </LinearLayout>
    </android.support.v7.widget.CardView>
    </LinearLayout>
</ScrollView>
